# hlhub

./: .gitignore  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  config.example.yaml  install.cmd  messages.example.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE_NOTES.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
message-packs/: cute-style.txt  daily-greeting.txt  festival.txt  funny-style.txt  index.json  light-care.txt
scripts/: build-portable.ps1  health-check.ps1  install-shortcut.ps1  install-task.ps1  install.ps1  remove-task.ps1  repair-playwright.ps1  run-scheduled.ps1  start-dashboard.cmd  start-dashboard.ps1
src/autody/: __init__.py  account_profile.py  chat.py  cli.py  config.py  friend_discovery.py  history.py  locking.py  log_center.py  logging_setup.py  message_packs.py  messages.py  modules.py  preflight.py  recovery.py  (+7 more)
tests/: test_account_profile.py  test_chat.py  test_cli.py  test_config.py  test_friend_discovery.py  test_history.py  test_installer_scripts.py  test_locking.py  test_log_center.py  test_logging_setup.py  test_message_packs.py  test_messages.py  test_modules.py  test_portable_scripts.py  test_preflight.py  test_recovery.py  test_runner.py  test_runtime.py  test_runtime_regression.py  test_scheduler.py  test_scheduler_scripts.py  test_state.py  test_statistics.py  test_transfer.py  test_web_actions.py  test_web_api.py
(+48 files in other folders)
