[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autody"
version = "1.1.1"
description = "Windows-local daily Douyin spark message automation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "Pillow>=10,<13",
  "playwright>=1.52,<2",
  "pydantic>=2.11,<3",
  "python-multipart>=0.0.20,<1",
  "PyYAML>=6,<7",
  "typer>=0.16,<1",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9", "pytest-playwright>=0.7,<1"]

[project.scripts]
autody = "autody.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/autody"]

[tool.hatch.build]
include = [
  "src/autody/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
